file names change

--- a/UnderSampling.ipynb
+++ b/UnderSampling.ipynb
@@ -11,7 +11,7 @@
     "import opfython.stream.parser as p\n",
     "import opfython.stream.splitter as s\n",
     "\n",
-    "from downSampling_OPF import DS\n",
+    "from underSampling_OPF import US\n",
     "import os\n",
     "\n",
     "import numpy as np\n",
@@ -28,10 +28,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = ['1069_5gt','1069_7gt','1086_5ge', '1086_7ge','1143_5gte','1143_7gte']\n",
-    "folds = np.arange(1,21)\n",
+    "#datasets = ['indian_liver','secom','seismic_bumps', 'spam','vertebral_column','wilt']\n",
+    "datasets = ['indian_liver']\n",
+    "folds = np.arange(1,2)\n",
     "\n",
-    "dsOPF = DS()\n",
+    "usOPF = US('ResultsGeneral')\n",
     "\n",
     "\n",
     "\n",
@@ -48,7 +49,7 @@
     "        Y = concat[:,-1].astype(np.int) \n",
     "        indices = np.arange(len(X))\n",
     "        \n",
-    "        output = dsOPF.run(X, Y, indices)\n",
+    "        output = usOPF.run(X, Y, indices)\n",
     "        \n",
     "        X = X[:len(train),...]\n",
     "        Y = Y[:len(train),...]\n",
@@ -63,32 +64,22 @@
     "            os.makedirs(pathDataset)  \n",
     "            \n",
     "            \n",
-    "            \n",
-    "        #output_order = output[output[:,1]==majority_class]\n",
-    "        #output_majority_negative = output_majority[output_majority[:,2]<0]\n",
-    "        \n",
-    "        #X_train = np.delete(X, output_majority_negative[:,0],0)\n",
-    "        #Y_train = np.delete(Y, output_majority_negative[:,0])\n",
-    "        #self.__saveDataset(X_train,Y_train, pathDataset,fmt,'major_negative')\n",
-    "        #self.__saveResults(X_train,Y_train, X_test, Y_test, ds,f, 'major_negative')\n",
-    "            \n",
-    "            \n",
     "        \n",
     "        #1st case: remove samples from majoritary class with negative scores      \n",
-    "        #dsOPF.major_negative( output, X, Y, pathDataset, 1)\n",
+    "        usOPF.major_negative( output, X, Y, X_test, Y_test,pathDataset, 1, ds,f,2)\n",
     "\n",
     "        #2st case: remove samples from majoritary class with negative or zero scores\n",
-    "        #dsOPF.major_neutral( output, X, Y, pathDataset, 1)   \n",
+    "        usOPF.major_neutral( output, X, Y, X_test, Y_test,pathDataset, 1, ds,f,2)   \n",
     "        \n",
     "        #3st case: remove all samples with negative\n",
-    "        #dsOPF.negative( output, X, Y, pathDataset, 1)\n",
+    "        usOPF.negative( output, X, Y, X_test, Y_test,pathDataset, 1, ds,f,2)\n",
     "        \n",
     "        #4st case: remove samples from majoritary class with negative or zero scores \n",
     "            # and from minoritary class with negative scores\n",
-    "        #dsOPF.negatives_major_zero( output, X, Y, pathDataset, 1)\n",
+    "        usOPF.negatives_major_zero( output, X, Y,X_test, Y_test, pathDataset, 1, ds,f,2)\n",
     "        \n",
     "        #5st case: remove samples from majoritary class until balancing the dataset\n",
-    "        dsOPF.balance( output, X, Y, X_test, Y_test, pathDataset, 1, ds,f)\n",
+    "        usOPF.balance( output, X, Y, X_test, Y_test, pathDataset, 1, ds,f,2)\n",
     "        "
    ]
   }
